--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -6,8 +6,10 @@
 		{% for task in tasks %}
 		<li>
 			<div class="collapsible-header">
-				<div class="col s3">
-					<i class="material-icons">expand_more</i>
+				<div class="col s1">
+                    <i class="material-icons">expand_more</i>
+                </div>
+                <div class="col s2">
 					<a href="{{url_for('delete_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small">Done</a>
 					<a href="{{url_for('edit_task', task_id=task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
 				</div>
